# xmonad

./: .gitignore  .mailmap  .travis.yml  CHANGES.md  CONFIG  CONTRIBUTING.md  Config.hs  Config.hs-boot  Config.lhs  DefaultConfig.hs  EventLoop.hs  INSTALL.md  LICENSE  Layouts.hs  MAINTAINERS.md  Main.hs  Main.hs-boot  Operations.hs  README  README.md  STYLE  StackSet.hs  TODO  TUTORIAL.md  W.hs  WMonad.hs  Wm.hs  XMonad.hs  XlibExtras.hsc  cabal.haskell-ci  cabal.project  config.hs  default.nix  flake.nix  nixpkgs.json  release.nix  shell.nix  stack.yaml  thunk.cabal  thunk.hs  (+2 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: generatemanpage.yml  haskell-ci-dependabot.patch  haskell-ci-hackage.patch  haskell-ci.yml  hlint.yaml  hlint.yml  nix.yml  packdeps.yml  stack.yml  tests.yml
Thunk/: Wm.hs  XlibExtras.hsc
XMonad/: Config.hs  Core.hs  DefaultConfig.hs  EventLoop.hs  Layout.hs  Layouts.hs  Main.hs  Main.hsc  ManageHook.hs  Operations.hs  StackSet.hs
include/: XlibExtras.h
man/: HCAR.tex  Makefile  xmonad.1  xmonad.1.html  xmonad.1.in  xmonad.1.markdown  xmonad.1.markdown.in  xmonad.hs
src/: XMonad.hs
src/XMonad/: Config.hs  Core.hs  Layout.hs  Main.hs  Main.hsc  ManageHook.hs  Operations.hs  StackSet.hs
src/XMonad/Internal/: Core.hs  Operations.hs
tests/: Catch.hs  Instances.hs  Main.hs  Properties.hs  Utils.hs  coverage.hs  loc.hs
tests/Properties/: Delete.hs  Failure.hs  Floating.hs  Focus.hs  GreedyView.hs  Insert.hs  Screen.hs  Shift.hs  Stack.hs  StackSet.hs  Swap.hs  View.hs  Workspace.hs
tests/Properties/Layout/: Full.hs  Tall.hs
util/: GenerateManpage.cabal  GenerateManpage.cabal.project  GenerateManpage.cabal.project.freeze  GenerateManpage.hs  gapcalc.c  hpcReport.sh
