name:           thunk
version:        0.0
description:    A lightweight X11 window manager.
synopsis:       A lightweight X11 window manager.
category:       System
author:         Spencer Janssen
maintainer:     sjanssen@cse.unl.edu
build-depends:  base >= 2.0, X11, unix, mtl

executable:     thunk
main-is:        thunk.hs
extensions:     ForeignFunctionInterface
other-modules:  Thunk.XlibExtras
ghc-options:    -O
include-dirs:   include
-- OpenBSD:
-- include-dirs:   include /usr/X11R6/include
