name:           thunk
version:        0.0
description:    A lightweight X11 window manager.
synopsis:       A lightweight X11 window manager.
category:       System
license:        BSD3
license-file:   LICENSE
author:         Spencer Janssen
maintainer:     sjanssen@cse.unl.edu
build-depends:  base==2.0, X11>=1.1, X11-extras==0.0, unix==1.0, mtl==1.0

executable:     thunk
main-is:        Main.hs
ghc-options:    -O2 -Wall -optl-Wl,-s
-- ghc-options:    -O2 -Wall -optl-Wl,-s -prof -auto-all
extensions:     GeneralizedNewtypeDeriving
